   "PBS: job killed: vmem 1234000 exceeded limit 1048576" in the output.

 o If the built-in attempts of batchtools for finding a default template file
   failes, then system("templates", package = "future.batchtools") is searched
   for template files as well.  Currently, there exists a `torque.tmpl` file.

 o A job's name in the scheduler is now set as the future's label (requires
   batchtools 0.9.4 or newer).
   
 o print() for BatchtoolsFuture returns the object invisibly.

BUG FIXES:

 o Calling future_lapply() with functions containing globals part of non-default
   packages would when using batchtools futures give an error complaining that
   the global is missing. This was due to updates in future (>= 1.4.0) that
   broke this package.
 
 o loggedOutput() for BatchtoolsFuture would always return NULL unless an error
   had occured.


Version: 0.5.0 [2017-06-02]

 o First version submitted to CRAN.
 
SOFTWARE QUALITY:

 o Added more tests; test coverage now at 93%.
 

Version: 0.4.0 [2017-05-16]

NEW FEATURES:

 o Added batchtools_custom() for specifying batchtools futures using any type
   of batchtools cluster functions.
   
 o batchtools_template(pathname = NULL, type = <type>) now relies on the
   batchtools package for locating the <type> template file.
   
 o nbrOfWorkers() for batchtools futures now defaults to +Inf unless the
   evaluator's 'workers' or 'cluster.functions' specify something else.

 o Renamed argument 'pathname' to 'template' for batchtools_<tmpl>() functions.

BUG FIXES:
   
 o Under plan(batchjobs_*), when being created futures would produce an error
   on "all(is.finite(workers)) is not TRUE" due to an outdated sanity check.

SOFTWARE QUALITY:

 o TESTS: Added test of future_lapply() for batchtools backends.

 o TESTS: Added optional tests for batchjobs_* HPC schedulers listed in
   environment variable 'R_FUTURE_TESTS_STRATEGIES'.

CODE REFACTORING:

 o CLEANUP: Package no longer depends on R.utils.

 
Version: 0.3.0 [2017-03-19]